--- a/src/Core/Resources/Resources.resx
+++ b/src/Core/Resources/Resources.resx
@@ -503,4 +503,38 @@
     <value>Manual</value>
     <comment>Connection type option for manual connection</comment>
   </data>
+  
+  <!-- Language Selection UI -->
+  <data name="Language_Selection" xml:space="preserve">
+    <value>Language</value>
+    <comment>Label for language selection dropdown</comment>
+  </data>
+  <data name="Language_English" xml:space="preserve">
+    <value>English</value>
+    <comment>English language option</comment>
+  </data>
+  <data name="Language_Spanish" xml:space="preserve">
+    <value>Español</value>
+    <comment>Spanish language option</comment>
+  </data>
+  <data name="Language_French" xml:space="preserve">
+    <value>Français</value>
+    <comment>French language option</comment>
+  </data>
+  <data name="Language_German" xml:space="preserve">
+    <value>Deutsch</value>
+    <comment>German language option</comment>
+  </data>
+  <data name="Language_Japanese" xml:space="preserve">
+    <value>日本語</value>
+    <comment>Japanese language option</comment>
+  </data>
+  <data name="Language_SelectLanguage" xml:space="preserve">
+    <value>Select Language</value>
+    <comment>Tooltip for language selection</comment>
+  </data>
+  <data name="Language_ChangeConfirmation" xml:space="preserve">
+    <value>Language changed successfully</value>
+    <comment>Confirmation message when language is changed</comment>
+  </data>
 </root>
