--- a/src/Core/Resources/Resources.de.resx
+++ b/src/Core/Resources/Resources.de.resx
@@ -290,6 +290,10 @@
     <value>Erweitern</value>
     <comment>Button text to expand row details</comment>
   </data>
+  <data name="Monitor_ConnectionPageDetails" xml:space="preserve">
+    <value>Die Verbindungsseite bietet weitere Details</value>
+    <comment>Message directing users to connection page for details</comment>
+  </data>
   <!-- Info Page -->
   <data name="Info_ApplicationName" xml:space="preserve">
     <value>OSDP-Bank</value>
