Update the Connection Page UI layout

--- a/src/Core/Resources/Resources.resx
+++ b/src/Core/Resources/Resources.resx
@@ -219,6 +219,14 @@
     <value>Baud Rate</value>
     <comment>Label for baud rate selection</comment>
   </data>
+  <data name="Connect_ConnectionSettings" xml:space="preserve">
+    <value>Connection Settings</value>
+    <comment>Header for connection settings section</comment>
+  </data>
+  <data name="Connect_SecuritySettings" xml:space="preserve">
+    <value>Security Settings</value>
+    <comment>Header for security settings section</comment>
+  </data>
   <data name="Connect_Address" xml:space="preserve">
     <value>Address</value>
     <comment>Label for device address input</comment>
