--- a/src/Core/Resources/Resources.de.resx
+++ b/src/Core/Resources/Resources.de.resx
@@ -134,9 +134,9 @@
     <comment>Prefix for device serial number display</comment>
   </data>
   <!-- Connection Messages -->
-  <data name="Connection_DeviceConnectedFormat" xml:space="preserve">
-    <value>Gerät, das an der Adresse verbunden ist {0} mit einer Baudrate von {1}</value>
-    <comment>Format string for displaying connection details. {0} = address, {1} = baud rate</comment>
+  <data name="Status_ConnectionFormat" xml:space="preserve">
+    <value>Adresse {0} bei {1}</value>
+    <comment>Brief connection status format. {0} = address, {1} = baud rate</comment>
   </data>
   <!-- Page Titles -->
   <data name="Page_Connect" xml:space="preserve">
