--- a/src/Core/Resources/Resources.ja.resx
+++ b/src/Core/Resources/Resources.ja.resx
@@ -134,9 +134,9 @@
     <comment>Prefix for device serial number display</comment>
   </data>
   <!-- Connection Messages -->
-  <data name="Connection_DeviceConnectedFormat" xml:space="preserve">
-    <value>アドレスで接続されたデバイス {0} ボーレート {1}</value>
-    <comment>Format string for displaying connection details. {0} = address, {1} = baud rate</comment>
+  <data name="Status_ConnectionFormat" xml:space="preserve">
+    <value>アドレス {0} - {1}</value>
+    <comment>Brief connection status format. {0} = address, {1} = baud rate</comment>
   </data>
   <!-- Page Titles -->
   <data name="Page_Connect" xml:space="preserve">
